# Mushroom

./: .gitignore  CMakeLists.txt  Makefile  README.md  lunarbat-devlog.md  run.sh  test.mush  test2.mush  todo.md  valgrind.sh
src/: main.cpp  mushroom.cpp
src/headers/: debug.hpp  environment.hpp  file.hpp  interpreter.hpp  lexer.hpp  mushroom.hpp  parser.hpp  token.hpp  utils.hpp
src/headers/helpers/: debug.hpp  error.hpp  response.hpp  utils.hpp
src/headers/parsing/: lexer.hpp  parser.hpp
src/headers/runtime/: environment.hpp  interpreter.hpp
src/headers/types/: node.hpp  token.hpp  values.hpp
src/helpers/: debug.cpp  file.cpp  utils.cpp
src/parsing/: lexer.cpp  parser.cpp
src/runtime/: environment.cpp  interpreter.cpp
src/types/: node.cpp  token.cpp  value.cpp
